Atualizando a versão do Vite para 5.4.19, ajustando a formatação do componente Main e melhorando a estrutura do CSS para os componentes Carddetails e useCardFeatures. Adicionando suporte para múltiplas imagens nos projetos e implementando um intervalo de troca de imagens.

--- a/src/hooks/Card/carddetails.css
+++ b/src/hooks/Card/carddetails.css
@@ -25,7 +25,6 @@
     left: 0%;
     background: var(--Backgtound-fundo-Color);
     display: flex;
-
 }
 
 .card-button-close {
@@ -38,13 +37,15 @@
 .close-button {
     height: 50px;
     width: 50px;
+    border-radius: 50%;
     display: flex;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     padding: 0.5rem;
+    color: var(--Color-button-close-carddeltails);
     margin: 2rem;
     font-size: 25px;
     font-weight: 900;
-    background: var(--Backgtound-fundo-Color);
+    background-color: var(--Color-texte-portifolio);
     border: none;
 }
