Ajustando o intervalo de troca de imagens para 6000ms, adicionando contêiner para imagens na linha do tempo e melhorando a estrutura do componente Carddetails.

--- a/src/hooks/Card/carddetails.css
+++ b/src/hooks/Card/carddetails.css
@@ -49,3 +49,11 @@
     background-color: var(--Color-texte-portifolio);
     border: none;
 }
+
+.card-image {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: start;
+}
