--- a/src/hooks/Card/carddetails.css
+++ b/src/hooks/Card/carddetails.css
@@ -66,13 +66,38 @@
     align-items: start;
 }
 
+.previous-imagem {
+    height: 100%;
+    bottom: 10%;
+    width: 50px;
+    margin: 1rem;
+    display: flex;
+    font-size: 3rem;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
 #imagem-project {
     top: 10%;
     max-height: 900px;
     max-width: 900px;
-    cursor: none;
     object-fit: cover;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transform: none;
 }
+
+
+.next-imagem {
+    height: 100%;
+    bottom: 10%;
+    width: 50px;
+    margin: 1rem;
+    display: flex;
+    font-size: 3rem;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
