--- a/src/hooks/Card/carddetails.css
+++ b/src/hooks/Card/carddetails.css
@@ -110,9 +110,11 @@
 
 .card-project-sites {
     width: 100%;
+    margin: 1rem;
+    padding: 2rem;
+    gap: 1rem;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
-    flex-direction: column;
 }
 
