--- a/src/hooks/Card/carddetails.css
+++ b/src/hooks/Card/carddetails.css
@@ -16,11 +16,11 @@
 .card-details-project {
     height: 98%;
     width: 100%;
-    display: flex;
     flex-direction: column;
     position: relative;
     border-top-left-radius: 50px;
     border-top-right-radius: 50px;
+    will-change: transform, opacity;
     top: 5rem;
     left: 0%;
     background: var(--Backgtound-fundo-Color);
@@ -118,3 +118,45 @@
     align-items: center;
 }
 
+@media (max-width: 480px) {
+    .card-container {
+        height: 60%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .card-project-sites {
+        height: 10%;
+        justify-content: end;
+        align-items: center;
+    }
+
+    .card-image-container {
+        width: 100%;
+    }
+
+    .name-projetc {
+        padding: 1rem 0rem;
+        font-size: 2rem;
+    }
+
+    .previous-imagem {
+        width: 30px;
+        height: 30px;
+        margin: 0.1rem;
+    }
+
+    #imagem-project {
+        top: 5%;
+        width: 100%;
+        height: 300px;
+    }
+
+    .next-imagem {
+        width: 30px;
+        height: 30px;
+        margin: 0.1rem;
+    }
+}
